Prevent search icon from overlapping scrollbar on homepage

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -371,7 +371,7 @@ a.slideButton,
 }
 
 .dosearch {
-    right: 10px;
+    right: 30px;
     background: #00d2ff;
     border-radius: .188rem;
     padding: .125rem .188rem
